final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
  labels:
    app: devops-demo
spec:
  type: ClusterIP
  selector:
    app: devops-demo
  ports:
    - port: 80
      targetPort: 8000
