final-devops-project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo
spec:
  ingressClassName: nginx
  rules:
    - host: devops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-demo
                port:
                  number: 80
